Se implementan las clases que relacionan las tablas de la Base de datos BlogDapper

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-NLF4KTP;Initial Catalog=BlogDapper;Integrated Security=True;Encrypt=False"
+  }
 }
