Implementación del CRUD completo - Entidad Publicacion

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-NLF4KTP;Initial Catalog=BlogDapper;Integrated Security=True;Encrypt=False"
+    "DefaultConnection": "Data Source=DESKTOP-NLF4KTP;Initial Catalog=BlogDapper;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
   }
 }
